--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ h1 {
   height: 150px;
   padding: 10px;
   width: 90%;
+  max-width: 90%;
   text-align: left;
   background-color: rgb(246, 246, 246);
   color: rgb(175, 175, 175);
@@ -150,6 +151,7 @@ h1 {
   font-family: "titillium";
   font-size: 16px;
   line-height: 1.2;
+  resize: vertical;
 }
 
 datalist {
